# spendings

./: .gitignore  Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml
spendings/: asgi.py  settings.py  urls.py  wsgi.py
spendings/settings/: base.py  build.py  development.py  production.py  testing.py
